--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "debug": "^3.1.0",
     "ejs": "~2.6.1",
     "express": "~4.16.3",
-    "http-errors": "~1.6.3",
+    "http-errors": "~1.7.0",
     "morgan": "~1.9.0"
   }
 }
